web-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stwl-web
spec:
  selector:
    matchLabels:
      app: stwl-web
  replicas: 1
  template:
    metadata:
      labels:
        app: stwl-web
    spec:
      containers:
        - name: sample-oke-canary-app
          # enter the path to your image, be sure to include the correct region prefix
          image: phx.ocir.io/axywji1aljc2/web:${BUILDRUN_HASH}
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits: 
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - cat
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: stwl-web-svc
  annotations: 
    service.beta.kubernetes.io/oci-load-balancer-shape: "10Mbps"
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: stwl-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stwl-web-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stwl-web-svc
              port:
                number: 80
